[package]
name = "distributed-comm-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
lapin = "2"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
